package bc_master;

///////////////////////////////////////////////////////////////////////////
message pb_MSG_BC_MASTER_APPLY
{
	required string InstanceID = 1;
	required int32 number = 2;
}

message pb_MSG_BC_MASTER_APPLY_ACK
{
	repeated string IP = 1;
}

